# sora-videogen

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
app/: config.py  database.py  main.py  models.py  prompt_language.py  schemas.py  templating.py  video_timing.py
app/routers/: projects.py  prompts.py  videos.py
app/services/: entra_auth.py  media_backend.py  media_backend_health.py  openai_client.py  prompt_generator.py  scraper.py  summarizer.py  tts.py  video_generator.py  video_stitcher.py
app/static/css/: style.css
app/static/js/: app.js
app/tasks/: pipeline.py
app/templates/: base.html  index.html  project_detail.html
app/templates/components/: generation_status.html  history_panel.html  project_detail_content.html  project_list.html  project_row.html  prompt_card.html  video_status.html
tests/: conftest.py  test_entra_auth.py  test_main.py  test_media_backend.py  test_media_backend_health.py  test_openai_client.py  test_pipeline.py  test_projects.py  test_prompt_generator.py  test_prompts.py  test_scraper.py  test_summarizer.py  test_tts.py  test_video_generator.py  test_video_timing.py  test_videos.py
